# distributed-notification-system

./: USER_SERVICE_FLOW.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: push_service.yaml
api-gateway/: .dockerignore  .gitignore  docker-compose.yml  package-lock.json  package.json
api-gateway /: .gitignore  Dockerfile
api-gateway/src/: app.module.ts  main.ts
email-service/: .env.example  Dockerfile  README.MD  deploy.yml.example  docker-compose.yml  jest.config.js  package-lock.json  package.json
email-service/src/: app.module.ts  main.ts
push-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  FLOW.md  README.MD  docker-compose-example.yaml  schema.sql
push-service/.github/workflows/: push_service.yaml
push-service/.sqlx/: query-42799df09f28f38b73c4a0f90516dc432e7660d679d3ce8eb448cde2dad81608.json  query-f9166bbfd907b7f6a3948a199400865fe063e8c1550c8150f006f45d172ff920.json
push-service/mock-services/: firebase-messaging-sw.js  index.html  template_service.py
push-service/src/: api.rs  config.rs  lib.rs  main.rs  utils.rs
push-service/src/clients/: circuit_breaker.rs  database.rs  fcm.rs  health.rs  mod.rs  rbmq.rs  redis.rs  template.rs
push-service/src/models/: audit.rs  circuit_breaker.rs  fcm.rs  health.rs  message.rs  mod.rs  response.rs  retry.rs  status.rs  template.rs  validation.rs
push-service/tests/: e2e_tests.rs  idempotency_test.rs  mod.rs  queue_test.rs  queue_tests.rs  retry_tests.rs
src/: app.module.ts  main.ts
src/config/: configuration.ts
src/database/: data-source.ts
template-service/: .env.example  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.MD  TESTING.md  docker-compose.dev.yml  docker-compose.yml  jest.config.js  ormconfig.ts  package.json  template_flow.md  test-cache.ps1  test-cache.sh  test-circuit-breaker.ps1  tsconfig.build.json  tsconfig.json
template-service/src/: app.module.ts  main.ts
user-service/: .env.example  Dockerfile  USER_SERVICE_FLOW.md  docker-compose.yml  package-lock.json  package.json
(+111 files in other folders)
