[package]
name = "push-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "push_service"
path = "src/main.rs"

[lib]
name = "push_service"
path = "src/lib.rs"
