[package]
name = "push-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
lapin = "3.7.2"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "push_service"
path = "src/main.rs"

[lib]
name = "push_service"
path = "src/lib.rs"
