[package]
name = "push-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
gcp_auth = "0.12.4"
lapin = "3.7.2"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-native-tls-comp"] }
reqwest = { version = "0.12.24", features = ["json"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }

[dev-dependencies]
testcontainers = "0.25.2"
tokio-test = "0.4.4"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
wiremock = "0.6.5"

[[bin]]
name = "push_service"
path = "src/main.rs"

[lib]
name = "push_service"
path = "src/lib.rs"

[[test]]
name = "push_service"
path = "tests/mod.rs"
